# Whatsapp-Analyzer

./: .gitignore  Cargo.toml  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
.github/workflows/: ci.yml  deploy.yml
chat-core-wasm/: Cargo.toml
chat-core-wasm/benches/: phrases.rs
chat-core-wasm/examples/: bench_real.rs
chat-core-wasm/src/: analysis.rs  journey.rs  lib.rs  metrics.rs  parsing.rs  phrases.rs  sentiment.rs  stopwords.rs  text.rs  types.rs
src/: App.tsx  main.rs  main.tsx  styles.css
src/components/: ChartCard.test.tsx  ChartCard.tsx  EmojiCloud.test.tsx  EmojiCloud.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  FeatureCard.tsx  Footer.test.tsx  Footer.tsx  Navbar.test.tsx  Navbar.tsx  PieTooltip.test.tsx  PieTooltip.tsx  StatCard.test.tsx  StatCard.tsx  WordCloud.test.tsx  WordCloud.tsx
src/components/dashboard/: ActivityRadar.tsx  ColorModal.test.tsx  ColorModal.tsx  ConversationStarters.tsx  DashboardHeader.tsx  EmojiCloudCard.tsx  EmptyResultState.tsx  HourlyChart.tsx  JourneySection.tsx  LoadingOverlay.tsx  MessageBubble.tsx  PhrasesSection.tsx  SentimentSection.tsx  StatsTable.tsx  TimelineChart.tsx  TopSendersPie.tsx  UploadSection.tsx  WordCloudCard.tsx  chartTheme.ts  index.ts
src/data/: mock.ts
src/lib/: analysis.worker.ts  colors.test.ts  colors.ts  constants.test.ts  constants.ts  streak.test.ts  streak.ts  types.ts  upload-name.test.ts  wasm.test.ts  wasm.ts
src/lib/__fixtures__/: mockSummary.ts
src/lib/hooks/: index.ts  useColorMap.test.ts  useColorMap.ts  useDashboardStats.test.ts  useDashboardStats.ts  useFileProcessing.test.ts  useFileProcessing.ts
src/pages/: Dashboard.regression.test.tsx  Dashboard.test.tsx  Dashboard.tsx  Landing.tsx
src/types/: idle-callback.d.ts  wasm.d.ts
web/: .gitignore  package.json  pnpm-lock.yaml
web/chat-core-wasm/: Cargo.toml
web/chat-core-wasm/src/: lib.rs
web/src/: App.tsx  styles.css
(+12 files in other folders)
