[package]
name = "whatsapp_analyzer_v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
polars = { git = "https://github.com/pola-rs/polars", branch = "wrap", version = "=0.38.2", features = ["default", "lazy", "strings", "extract_groups", "dtype-struct", "bigidx"]}
rand = "0.8.5"
regex = "1.10.3"
