[package]
name = "whatsapp_analyzer_v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1


[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
polars = { version = "0.42.0", features = ["lazy", "strings", "dtype-datetime", "dtype-date", "fmt", "timezones"] }
regex = "1.11"
unicode-segmentation = "1.11"
