[package]
name = "chat_core_wasm"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
timing = []  # Enable performance timing logs in WASM builds

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.5"
regex = "1"
once_cell = "1.19"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
unicode-segmentation = "1.11"
console_error_panic_hook = { version = "0.1", optional = true }
stopwords = "0.1.1"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Performance", "Window"] }

[dev-dependencies]
serde_json = "1"
criterion = "0.5"

[[bench]]
name = "phrases"
harness = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
